# Assignment1FileManagement

./: Appointment.h  Appointment.txt  AppointmentPrimaryIndex.h  AppointmentPrimaryIndex.txt  AppointmentSecondaryIndex  CMakeLists.txt  Doctor.h  DoctorPrimaryIndex.h  SecondaryIdxDrName.h  SecondaryIndexForAppointment.h  doctors.txt  main.cpp  primaryIndex.txt
